deployment & flows work

--- a/livepublication_portal/templates/home.html
+++ b/livepublication_portal/templates/home.html
@@ -10,7 +10,7 @@
       <p class="lead">Head to the Control Center to start executing flows</p>
     {% else %}
       <h1 class="display-5">Hi Guest</h1>
-      <p class="lead">Browse publciations, or view the current state of the hosted LivePublications!</p>
+      <p class="lead">Browse publications, or view the current state of the hosted LivePublications!</p>
     {% endif %}
     <hr class="my-4">    
   </div>
