--- a/livepublication_portal/templates/globus-portal-framework/v2/components/base-nav.html
+++ b/livepublication_portal/templates/globus-portal-framework/v2/components/base-nav.html
@@ -16,7 +16,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item {% nav_active 'publications' %}">
-        <a class="nav-link nav-link-base-nav" href="{% url 'publications' %}">Publciations</a>
+        <a class="nav-link nav-link-base-nav" href="{% url 'publications' %}">Publications</a>
       </li>
       <li class="nav-item {% nav_active 'system-status' %}">
         <a class="nav-link nav-link-base-nav" href="{% url 'system-status' %}">System Status</a>
